--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
     <!--Bootstrap CSS -->
 
 </head>
-
+<div class="container bg-successs col-sm-6">
+    <img src="./pics/akan.jpg" class="rounded float-left" alt="..." height="100" width="100">
+    <img src="./pics/akan.jpg" class="rounded float-right" alt="..." height="100" width="100">
+    <legend id="top">KNOW YOUR AKAN NAME</legend>
+    <form><br>
+        <p>You are to iput your date of birth and month and year so as we can give you your name in Akan.</p>
+        <div class="day">
+            <label for="day">Day:</label>
+            <div class="col-sm-4">
+                <input type="day" name="day" id="day" maxlength="2">
+            </div>
+        </div><br>
 <body>
