--- a/index.html
+++ b/index.html
@@ -25,4 +25,16 @@
                 <input type="day" name="day" id="day" maxlength="2">
             </div>
         </div><br>
+        <div class="month">
+            <label for="month">Month</label>
+            <div class="col-sm-4">
+                <input name="month" id="month" maxlength="2" required>
+            </div>
+        </div><br>
+        <div class="year">
+            <label for="year">Year</label>
+            <div class="col-sm-4">
+                <input type="year" name="year" id="year" maxlength="4" required>
+            </div>
+        </div>
 <body>
