changes html code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="./akan image.jpg" class="rounded float-right" alt="..." height="100" width="100">
     <legend id="top">KNOW YOUR AKAN NAME</legend>
     <form><br>
-        <p>Iput your date of birth, month and year so as we can display your Akan name.</p>
+        <p>Input your date of birth, month and year so as we can display your Akan name.</p>
 
         <div class="tin">
         <div class="day">
