adds codes to site

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <form><br>
         <p>Input your date of birth, month and year so as we can display your Akan name.</p>
 
+    <div class="image">
+        <img src="./image1.jpg" alt="" height="300" width="400">
+    </div>
         <div class="tin">
         <div class="day">
             <label for="day">Day:</label>
